# Supermercado

./: CMakeLists.txt  README.txt  productos_1000.csv  productos_ejemplo.csv
source/: Supermercado.cpp
source/estructuras/avl/: ArbolAvl.cpp  ArbolAvl.h  NodoAvl.cpp  NodoAvl.h
source/estructuras/b/: ArbolB.cpp  ArbolB.h  NodoB.cpp  NodoB.h
source/estructuras/bplus/: ArbolBPlus.cpp  ArbolBPlus.h  NodoBPlus.cpp  NodoBPlus.h
source/estructuras/listas/Nodo/: NodoList.cpp  NodoList.h
source/estructuras/listas/normal/: ListaEnlazada.cpp  ListaEnlazada.h  Nodo.h
source/estructuras/listas/ordenada/: ListaOrdenada.cpp  ListaOrdenada.h
source/excepciones/: ProductoNoEncontradoException.cpp  ProductoNoEncontradoException.h
source/frontend/: Frontend.cpp  Frontend.h
source/helpers/: CSVLoader.cpp  CSVLoader.h  DotGenerator.h  StringHelper.cpp  StringHelper.h
source/pojo/: Product.h  Producto.cpp
